k8s/ingress/authentik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-host-ingress
  namespace: authentik
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.provider: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - authentik.avocadotech.site
      secretName: nginx-certs
  rules:
    - host: authentik.avocadotech.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 9000
