k8s/ingress/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-host-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.provider: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik # DEFINIÇÃO EXPLÍCITA
  tls:
    - hosts:
        - minio.avocadotech.site
        - minio-console.avocadotech.site
      secretName: nginx-certs
  rules:
    - host: minio.avocadotech.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
    - host: minio-console.avocadotech.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
